--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "overtrue/laravel-lang": "~5.0",
         "overtrue/wechat": "~4.0",
         "tymon/jwt-auth": "^1.0"
     },
