--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^8.54",
         "laravel/horizon": "^5.7",
         "laravel/sanctum": "^2.11",
+        "laravel/telescope": "^4.6",
         "laravel/tinker": "^2.5",
         "overtrue/laravel-lang": "~5.0",
         "overtrue/wechat": "~4.0",
